--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,11 @@
   align-items: center;
   border: 1px dotted red;
 }
+
+.hit {
+  background-color: red;
+}
+
+.miss {
+  background-color: blue;
+}
