--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,103 @@
+@import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Plus&family=Ubuntu&display=swap');
+
+:root {
+  color: #ebeff5;
+  font-family: 'Ubuntu', sans-serif;
+  background-color: #424758;
+}
+
+body {
+  height: 100vh;
+  margin: 0px;
+}
+
+header {
+  text-transform: uppercase;
+  font-size: 64px;
+  font-weight: 700;
+  text-align: center;
+  padding: 32px 0px;
+}
+
+.suffix {
+  color: #9aa9db;
+}
+
+.game-mode,
+.game-start {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.game-mode {
+  font-size: 20px;
+}
+
+.game-mode label,
+.game-mode input {
+  cursor: pointer;
+}
+
+.game-mode input:disabled {
+  cursor: default;
+}
+
+.user-buttons {
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding: 12px 0px;
+}
+
+button {
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: default;
+}
+
+.game {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+  padding-bottom: 32px;
+}
+
+.player,
+.enemy {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.game-title {
+  padding: 8px 0px;
+}
+
+.game-display {
+  padding: 8px 0px;
+}
+
 .grid {
   display: grid;
   grid-template-rows: repeat(10, 1fr);
   grid-template-columns: repeat(10, 1fr);
   width: 250px;
   height: 250px;
+  border: 1px solid white;
+  border-radius: 2px;
 }
 
 .cell {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px dotted red;
+  border: 1px solid grey;
 }
 
 .preview-good {
@@ -18,7 +105,7 @@
 }
 
 .preview-bad {
-  background-color: yellow;
+  background-color: red;
 }
 
 .hit {
@@ -47,4 +134,20 @@
   margin: auto;
   padding: 20px;
   text-align: center;
+  color: white;
+  text-shadow: 1px 1px 3px black;
+  font-size: 32px;
+  background-color: #44403c;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background-color: #707070;
+  height: min-content;
+}
+
+@media only screen and (min-width: 600px) {
+
 }
